# Animus-Engine

./: .gitignore
Assets/Menu/: window.rcss
examples/base_app/: main.cpp
lib/: CMakeLists.txt
lib/imgui/: CMakeLists.txt
lib/stb/: CMakeLists.txt
src/Aurora/: Aurora.cpp
src/Aurora/Graphics/Base/: Texture.hpp
src/Aurora/Graphics/OpenGL/: GLUtils.hpp
src/Aurora/Physics/: AABB.hpp  Frustum.hpp
